[gd_scene load_steps=5 format=3 uid="uid://corqtxk48svlc"]

[ext_resource type="Script" path="res://Scripts/Weapons/Pistol/Pistol.gd" id="1_ia61s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_33w66"]
albedo_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tfvrn"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xb5it"]

[node name="Pistol" type="Node3D"]
script = ExtResource("1_ia61s")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.344, 0, 0, 0, 0.383, 0, 0, 0, 0.988, -0.000151634, 0.00219727, -0.00872803)
material_override = SubResource("StandardMaterial3D_33w66")
mesh = SubResource("BoxMesh_tfvrn")

[node name="BulletOrigin" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.652)

[node name="ShotRange" type="Area3D" parent="."]

[node name="ShotRangeArea" type="CollisionShape3D" parent="ShotRange"]
shape = SubResource("CylinderShape3D_xb5it")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.114819, 4.92889, -0.0373201)

[connection signal="body_exited" from="ShotRange" to="." method="_on_shot_range_body_exited"]
